--- a/src/app/joke-list/joke-list.component.html
+++ b/src/app/joke-list/joke-list.component.html
@@ -1,1 +1,1 @@
-<joke *ngFor="let jokeElement of array" [joke]="jokeElement"></joke>
+<joke-item *ngFor="let joke of array" [joke]="joke"></joke-item>
