--- a/src/app/joke-form/joke-form.component.html
+++ b/src/app/joke-form/joke-form.component.html
@@ -1,14 +1,15 @@
-<div class="card card-block">
-    <h4 class="card-title">Create Joke</h4>
+<div>
+    
+    <h4>Create Joke</h4>
 
-    <div class="form-group">
+    <div>
         <input type="text" placeholder="Enter the setup" #setup>
     </div>
 
-    <div class="form-group">
+    <div>
         <input type="text" placeholder="Enter the punchline" #punchline>
     </div>
 
-    <button type="button" (click)="createJoke(setup.value, punchline.value)">Create </button>
+    <button type="button" (click)="createJoke(setup.value, punchline.value)"> Create </button>
 
 </div>
